--- a/noaa-sealions-2.ipynb
+++ b/noaa-sealions-2.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import cv2\n",
@@ -51,7 +53,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def filter_image_files(file_names):\n",
@@ -235,7 +239,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# def preprocess_and_save(train_path, train_blob_path): \n",
@@ -286,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_x, train_y, valid_x, valid_y = preprocess(train_path, train_blob_path)"
@@ -302,7 +310,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import keras\n",
@@ -439,7 +449,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = model.predict(train_x, batch_size=1)"
@@ -497,6 +509,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -512,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
